<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"

    android:background="@color/background_app"

    tools:context=".app.imcCalculator.ImcCalculatorActivity">

    <!-- BOTONES DEL GENERO -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvFemale"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvSlider"
        app:layout_constraintVertical_chainStyle="packed"

        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="150dp"

        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:tint="@color/white"
                android:src="@drawable/ic_male"/>

            <TextView
                android:text="@string/tv_hombre"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"

        app:layout_constraintStart_toEndOf="@id/cvMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cvMale"

        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="150dp"

        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"
                android:layout_marginBottom="8dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_mujer"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
            />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- SLIDER DE LA ALTURA -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSlider"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"

        app:layout_constraintTop_toBottomOf="@id/cvMale"
        app:layout_constraintBottom_toTopOf="@id/cvWeigth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"

        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"

            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLabelSlider"
                android:text="@string/layout_altura"
                android:textAllCaps="true"
                android:textColor="@color/title_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvValorSlider"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                android:text="@string/layout_valor_slider"
                tools:text="170 cm"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeigth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- BOTONES DEL PESO -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeigth"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvAge"
        app:layout_constraintTop_toBottomOf="@id/cvSlider"
        app:layout_constraintBottom_toTopOf="@id/btNavegar"

        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"

        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLabelPeso"
                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:paddingTop="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvValorPeso"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                android:text="@string/label_peso"
                tools:text="80 kg"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btSubtract"
                android:backgroundTint="@color/background_fab"
                android:src="@drawable/ic_subtract"
                app:tint="@color/white"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btPlus"
                android:backgroundTint="@color/background_fab"
                android:src="@drawable/ic_plus"
                app:tint="@color/white"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- BOTONES DEL EDAD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"

        app:layout_constraintTop_toBottomOf="@id/cvSlider"
        app:layout_constraintStart_toEndOf="@id/cvWeigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cvWeigth"

        android:layout_width="0dp"
        android:layout_height="150dp"

        android:layout_marginStart="16dp"

        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLabelHeight"
                android:text="@string/edad"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:paddingTop="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvValorEdad"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                android:text="@string/label_edad"
                tools:text="25 años"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btSubtractAge"
                    android:backgroundTint="@color/background_fab"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btPlusAge"
                    android:backgroundTint="@color/background_fab"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <!-- BOTON DEL CALCULO Y NAVEGACIÓN -->
    <Button
        android:id="@+id/btNavegar"
        android:text="Calcular"
        android:textSize="18dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/background_fab"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAge"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="300dp"
        android:layout_height="80dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>

